JMCL-dev #26 pull